main overflow error fix

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -7,7 +7,6 @@
   height: calc(100vh - 4rem);
   margin-left: 250px;
   padding: 4rem;
-  width: 100%;
 }
 
 .modalBlur {
